--- a/info/index.html
+++ b/info/index.html
@@ -82,5 +82,9 @@ title: The Venue, Host Hotel, and Travel Deals!
 				<p>The Harmonized Sales Tax (HST) is a 13% tax that is applied to most purchases of taxable supplies of goods and services in the Province of Ontario. The HST consists of a 5% federal portion and an 8% retail sales tax portion.</p>
 				<h3>Taxis and Uber</h3>
 				<p>Taxis and UberX in Toronto share the same base fare but differ in service, per kilometer rates and time rates. Both are regulated and able to be used at your discretion.</p>
+				<h3>Parking</h3>
+				<p>Parking on most downtown streets is limited to specific times of day, and often requires you to purchase and display a ticket from one of the parking machines located along the street. Be sure to check and obey the signs posted along the street to make sure your vehicle doesn’t get ticketed or, worse, towed away.</p>
+
+				<p>There are also a variety of public parking lots throughout the city. City-owned lots are indicated by the ‘Green P’ logo – a large ‘P’ in a green circle. Plan in advance using <a href="http://parking.greenp.com/find-parking/" target="_blank">Green P’s parking locator</p> to find the nearest lot.</p>
 	</div>
 </section>
