--- a/info/index.html
+++ b/info/index.html
@@ -85,6 +85,6 @@ title: The Venue, Host Hotel, and Travel Deals!
 				<h3>Parking</h3>
 				<p>Parking on most downtown streets is limited to specific times of day, and often requires you to purchase and display a ticket from one of the parking machines located along the street. Be sure to check and obey the signs posted along the street to make sure your vehicle doesn’t get ticketed or, worse, towed away.</p>
 
-				<p>There are also a variety of public parking lots throughout the city. City-owned lots are indicated by the ‘Green P’ logo – a large ‘P’ in a green circle. Plan in advance using <a href="http://parking.greenp.com/find-parking/" target="_blank">Green P’s parking locator</p> to find the nearest lot.</p>
+				<p>There are also a variety of public parking lots throughout the city. City-owned lots are indicated by the ‘Green P’ logo – a large ‘P’ in a green circle. Plan in advance using <a href="http://parking.greenp.com/find-parking/" target="_blank">Green P’s parking locator</a> to find the nearest lot.</p>
 	</div>
 </section>
