--- a/info/index.html
+++ b/info/index.html
@@ -70,21 +70,17 @@ title: The Venue, Host Hotel, and Travel Deals!
 			<h2>While in Toronto</h2>
 			<h3>Money</h3>
 			<p>Toronto’s currency is the Canadian dollar. For denominations under five dollars we use coins – some we’ve even given cute names: the loonie ($1), and toonie ($2).
-			<p>Since 2013 our bills have been made of polymer and have a number of interesting design elements.
-				U.S. dollars are accepted in many Toronto establishments, although you’ll receive change in Canadian funds and exchange rates will differ from merchant to merchant</p>
-				<p>You’ll find cash machines/ATMs all over the city and in most banks, hotels and shopping centres
-					Credit cards are accepted at all major retailers.
-					Currency exchange is available at kiosks in the city and at the airport</p>
-				<h3>Tipping</h3>
-				<p>If you’re happy with the service you receive, a 20% tip is standard on the pre-tax bill is a standard expression of appreciation when dining out in the city. Note that some restaurants automatically add this gratuity when serving large groups, so be sure to check your bill.</p>
-				<p>Tips are also expected for services such as haircuts, shoe shines and taxi rides. 15-20% is standard in these situations as well.</p>
-				<h3>Taxes</h3>
-				<p>The Harmonized Sales Tax (HST) is a 13% tax that is applied to most purchases of taxable supplies of goods and services in the Province of Ontario. The HST consists of a 5% federal portion and an 8% retail sales tax portion.</p>
-				<h3>Taxis and Uber</h3>
-				<p>Taxis and UberX in Toronto share the same base fare but differ in service, per kilometer rates and time rates. Both are regulated and able to be used at your discretion.</p>
-				<h3>Parking</h3>
-				<p>Parking on most downtown streets is limited to specific times of day, and often requires you to purchase and display a ticket from one of the parking machines located along the street. Be sure to check and obey the signs posted along the street to make sure your vehicle doesn’t get ticketed or, worse, towed away.</p>
-
-				<p>There are also a variety of public parking lots throughout the city. City-owned lots are indicated by the ‘Green P’ logo – a large ‘P’ in a green circle. Plan in advance using <a href="http://parking.greenp.com/find-parking/" target="_blank">Green P’s parking locator</a> to find the nearest lot.</p>
+			<p>Since 2013 our bills have been made of polymer and have a number of interesting design elements. U.S. dollars are accepted in many Toronto establishments, although you’ll receive change in Canadian funds and exchange rates will differ from merchant to merchant</p>
+			<p>You’ll find cash machines/ATMs all over the city and in most banks, hotels and shopping centres. Credit cards are accepted at all major retailers. Currency exchange is available at kiosks in the city and at the airport</p>
+			<h3>Tipping</h3>
+			<p>If you’re happy with the service you receive, a 20% tip is standard on the pre-tax bill is a standard expression of appreciation when dining out in the city. Note that some restaurants automatically add this gratuity when serving large groups, so be sure to check your bill.</p>
+			<p>Tips are also expected for services such as haircuts, shoe shines and taxi rides. 15-20% is standard in these situations as well.</p>
+			<h3>Taxes</h3>
+			<p>The Harmonized Sales Tax (HST) is a 13% tax that is applied to most purchases of taxable supplies of goods and services in the Province of Ontario. The HST consists of a 5% federal portion and an 8% retail sales tax portion.</p>
+			<h3>Taxis and Uber</h3>
+			<p>Taxis and UberX in Toronto share the same base fare but differ in service, per kilometer rates and time rates. Both are regulated and able to be used at your discretion.</p>
+			<h3>Parking</h3>
+			<p>Parking on most downtown streets is limited to specific times of day, and often requires you to purchase and display a ticket from one of the parking machines located along the street. Be sure to check and obey the signs posted along the street to make sure your vehicle doesn’t get ticketed or, worse, towed away.</p>
+			<p>There are also a variety of public parking lots throughout the city. City-owned lots are indicated by the ‘Green P’ logo – a large ‘P’ in a green circle. Plan in advance using <a href="http://parking.greenp.com/find-parking/" target="_blank">Green P’s parking locator</a> to find the nearest lot.</p>
 	</div>
 </section>
