--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -6,9 +6,9 @@ title: Code of Conduct
   <div class="container">
     <div class="row col-md-12">
       <h2>Our Commitment to All</h2>
-      <p>All attendees, speakers, sponsors and volunteers at Full stack Toronto Inc. events are required to agree with the following code of conduct. Organizers will enforce this code throughout events. We are expecting cooperation from all participants to help ensuring a safe environment for everybody.</p>
+      <p>All attendees, speakers, sponsors and volunteers at Full stack Toronto events are required to agree with the following code of conduct. Organizers will enforce this code throughout events. We are expecting cooperation from all participants to help ensuring a safe environment for everybody.</p>
 
-      <p>Our conference is dedicated to providing a harassment-free experience for everyone, regardless of gender, age, sexual orientation, disability, physical appearance, body size, race, or religion (or lack thereof). We do not tolerate harassment of participants in any form. Sexual language and imagery is not appropriate for any conference venue, including talks, workshops, parties, Twitter and other online media. Conference participants violating these rules may be sanctioned or expelled from the conference without a refund at the discretion of the conference organizers.</p>
+      <p>Our events are dedicated to providing a harassment-free experience for everyone, regardless of gender, age, sexual orientation, disability, physical appearance, body size, race, or religion (or lack thereof). We do not tolerate harassment of participants in any form. Sexual language and imagery is not appropriate for any event venue, including talks, workshops, parties, Twitter and other online media. Event participants violating these rules may be sanctioned or expelled from the event without a refund at the discretion of the event organizers.</p>
 
       <p>Harassment includes offensive verbal comments related to gender, age, sexual orientation, disability, physical appearance, body size, race, religion, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.</p>
 
@@ -16,18 +16,20 @@ title: Code of Conduct
 
       <p>Sponsors and Speakers are also subject to the anti-harassment policy. In particular they should not use sexualized images, activities, or other material. Booth staff (including volunteers) should not use sexualized clothing/uniforms/costumes, or otherwise create a sexualized environment.</p>
 
-      <p>If a participant engages in harassing behavior, the conference organizers may take any action they deem appropriate, including warning the offender or expulsion from the conference with no refund.</p>
+      <p>If a participant engages in harassing behavior, the event organizers may take any action they deem appropriate, including warning the offender or expulsion from the event with no refund.</p>
 
-      <p>If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a staff member immediately. Staff will be happy to help participants contact security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of events. We value your attendance.</p>
+      <p>If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a staff member immediately (comms@fsto.co). Staff will be happy to help participants contact security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of events. We value your attendance.</p>
 
-      <p>We expect participants to follow these rules at all Full Stack Toronto Inc. related events and social events.</p>
+      <p>We expect participants to follow these rules at all Full Stack Toronto related events and social events.</p>
 
       <p>Adapted from http://confcodeofconduct.com/</p>
 
       <h2>Non-Commercial Policy</h2>
-      <p>Full Stack Toronto programs are non-commercial events. The Full Stack Toronto Inc. podium is not to be used as a place for direct promotion of a product, service or monetary self-interest nor for endorsing or discrediting others’ products or services. Presenters should be refrain from talking in depth about paid products and services.</p>
+      <p>Full Stack Toronto programs are non-commercial events. The Full Stack Toronto podium is not to be used as a place for direct promotion of a product, service or monetary self-interest nor for endorsing or discrediting others’ products or services. Presenters should refrain from talking in depth about paid products and services. We also ask that you keep any recruiting to the networking portions of events and not in talks. If you would like to reach our awesome attendees to recruit them please contact sponsorship@fsto.co</p>
 
       <p>In accordance with Full Stack Toronto’s non-commercial policy, distributing company literature or price lists and engaging in sales transactions as part of an event is prohibited unless agreed upon in a sponsorship agreement. (Note: This prohibition does not include the use of graphic material used to illustrate technological concepts described during presentations.)</p>
+
+      <p>If you have any questions or concerns please reach out to us at comms@fsto.co</p>
     </div>
   </div>
 </section>
