--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
 		<div class="row">
 			<div class="col-sm-12 col-md-8">
 				<h2>About #fstoco</h2>
-				<p>#fstoco is put on by Full Stack Toronto, a non-profit organisation geared towards providing web professionals with intermediate and advanced educational resources. #fstoco is a unique conference because it covers all the layers of the web: Front-end, Back-end, DevOps, UX and visual designs, project management, and product development. Questions? comms@fsto.co will respond as soon as possible. We do not provide visas for attendees.</p>
+				<p>#fstoco is put on by Full Stack Toronto, a non-profit organisation geared towards providing web professionals with intermediate and advanced educational resources. #fstoco is a unique conference because it covers all the layers of the web: Front-end, Back-end, DevOps, UX and visual designs, project management, and product development. Questions? <i>comms@fsto.co</i> will respond as soon as possible. We do not provide visas for attendees.</p>
 			</div>
 			<div class="col-md-1"></div>
 			<div class="col-md-3">
@@ -78,7 +78,7 @@ title: Home
 			</div>
 			<div class="col-sm-12 col-md-8">
 				<p>While speakers are largely unpaid in most other events, we are committed to rewarding ours while still ensuring the best quality experience for our attendees including expanding on their feedback such as providing a better way to interact with you the sponsor!<br>This comes at a huge, costly effort for our organisation.</p>
-			    <p>If your company is interested in helping by sponsoring the event please contact us at sponsorship@fsto.co. Sponsor contribution options can be found in the <a href="https://www.sponseasy.com/p/full-stack-toronto-conference">sponsorship site</a></p>
+			    <p>If your company is interested in helping by sponsoring the event please contact us at <i>sponsorship@fsto.co</i>. Sponsor contribution options can be found in the <a href="https://www.sponseasy.com/p/full-stack-toronto-conference">sponsorship site</a></p>
 				<p>Want to support us yourself? Terrific! An event like this takes a lot of human power. If you want to help out at the event and attend the presentations? Signup to be a volunteer!</p>
 			</div>
 		</div>
