--- a/contest/index.html
+++ b/contest/index.html
@@ -6,26 +6,26 @@ title: Contest Rules
   <div class="container">
     <div class="row col-md-12">
       <h2>Contest Rules &amp; Regulations</h2>
-      Description: The “Full Stack Toronto Early Bird Ticket Draw" (the “Contest”) commences 12:01am
-  Eastern Daylight Time (“EST”) on July 21, 2016 and ends 11:59pm EDT on Aug 14th, 2016 (the
+      <p>Description: The “Full Stack Toronto Early Bird Ticket Draw" (the “Contest”) commences 12:01am
+  Eastern Daylight Time (“EST”) on July 21, 2016 and ends 11:59pm EDT on Aug 4th, 2016 (the
   “Contest Period”). The Contest is brought to you by Full Stack Toronto. By entering the Contest, each
   entrant agrees to abide by and accept these Official Contest Rules and Regulations (the “Rules”).
   The Rules are subject to change without notice. Changes to the Rules will be posted at
   www.fsto.co . Contestants are responsible for checking the website and agree to abide by the
   most recent rules posted as at the end date of the Contest. No purchase necessary. For more
-  information about Full Stack Toronto’s Contest visit www.fsto.co/contest
+  information about Full Stack Toronto’s Contest visit www.fsto.co/contest</p>
 
-  Eligibility: The Contest is open to all legal residents of Canada, excluding residents of Québec,
+  <p>Eligibility: The Contest is open to all legal residents of Canada, excluding residents of Québec,
   who have reached the age of majority in their province of residence as of the first day of the
   Contest Period. Notwithstanding the above, the Contest is not open to individuals associated with
   the Contest, including the employees, agents or representatives of Full Stack Toronto and suppliers
   providing prizes or other materials or services in connection with this Contest (collectively referred
   to as the “Excluded Individuals”). This Contest is also not open to the immediate family members,
-  specifically spouse, children and parents of, or those who reside with, the Excluded Individuals.
+  specifically spouse, children and parents of, or those who reside with, the Excluded Individuals.</p>
 
-  Entry: No purchase necessary to enter or win. There are two ways to enter the contest.
-  1. To enter the Contest, participants must register for the Full Stack Toronto Conference and agree to recieving commercial electronic messages to be enterd.
-   Or
+  <p>Entry: No purchase necessary to enter or win. There are two ways to enter the contest.<br />
+  1. To enter the Contest, participants must register for the Full Stack Toronto Conference and agree to recieving commercial electronic messages to be enterd.<br />
+   Or<br />
   2. To enter the Contest, supply your name, complete address, telephone number (including
   area code), and e-mail address accompanied by a compelling, hand-written, one page
   letter describing why you believe Full Stack Toronto Early Bird Ticket campaign is a unique way for
@@ -33,12 +33,12 @@ title: Contest Rules
   receiving completed entry, they will receive one ballot into a draw for the Contest. All
   entries must be received during the Contest Period.
   Prizes: There is one Prize available to be won. The Prize is a ticket to Full Stack Toronto Conference with a total estimated
-  value of up to four hundred and ninety dollars ($490) CDN. Details found on www.fsto.co
+  value of up to five hundred and fifty-none dollars ($559) CDN. Details found on www.fsto.co</p>
 
-  Terms and Conditions: The prize has no cash value and cannot be redeemed for cash. In
-  addition the prize is non transferable.
+  <p>Terms and Conditions: The prize has no cash value and cannot be redeemed for cash. In
+  addition the prize is non transferable.</p>
 
-  Draw: A Senior Official of Full Stack Toronto will draw for the Grand Prize. The draw will take place in
+  <p>Draw: A Senior Official of Full Stack Toronto will draw for the Grand Prize. The draw will take place in
   Toronto, Ontario during the week of August 15th, 2016. The potential winner will be contacted by
   email by a representative of Full Stack Toronto and must be reached within 48 hours to maintain
   eligibility. In order to be declared a winner by Full Stack Toronto, a potential winner must be in
@@ -47,20 +47,20 @@ title: Contest Rules
   Rules and/or does not correctly answer the skill testing question or is not reachable within the
   notification period referred to above, Full Stack Toronto reserve the right to disqualify such entrant
   from the Contest and select further entrants from the remaining eligible entries until a winner is
-  finally declared.
+  finally declared.</p>
 
-  Release: Prior to receiving a Prize, the winner will be required to sign an affidavit of eligibility and
+  <p>Release: Prior to receiving a Prize, the winner will be required to sign an affidavit of eligibility and
   release form releasing Full Stack Toronto from all liability relating to the Contest and the acceptance of
   any Prize, confirming compliance with the Rules and consenting to the use of his or her name and
   photograph, without further compensation, in any publicity carried out by Full Stack Toronto and/or
-  their advertising and promotional agencies.
+  their advertising and promotional agencies.</p>
 
-  Privacy: Personal information collected from entrants will be used by Full Stack Toronto for the
+  <p>Privacy: Personal information collected from entrants will be used by Full Stack Toronto for the
   purpose of administering this Contest and each entrant consents to the collection, use and
   disclosure of personal information in accordance with the Full Stack Toronto privacy code located at
-  www.fsto.co.
+  www.fsto.co.</p>
 
-  Banning: Any attempt to tamper with the entry process, interfere with these Rules, deliberately
+  <p>Banning: Any attempt to tamper with the entry process, interfere with these Rules, deliberately
   damage any website or undermine the administration, security or legitimate operation of the
   Contest, is a violation of criminal and civil laws and Full Stack Toronto reserves the right to seek
   damages and/or other relief from all persons responsible for such acts to the fullest extent
@@ -89,7 +89,7 @@ title: Contest Rules
   many eligible entries are received. Full Stack Toronto is not liable for any lost or stolen entries or
   inability to process entries, or any errors, damage or negligence that may arise in connection with
   this Contest, including technical failures on the part of Contest software, virus, website down-time,
-  human error or property damage incurred by any Contest entrant.
+  human error or property damage incurred by any Contest entrant.</p>
     </div>
   </div>
 </section>
