--- a/contest/index.html
+++ b/contest/index.html
@@ -31,8 +31,9 @@ title: Contest Rules
   letter describing why you believe Full Stack Toronto Early Bird Ticket campaign is a unique way for
   Canadians to learn about web education. Mail completed entry to: Full Stack Toronto, 175 Bloor St East, attention “Full Stack Toronto Early Bird Contest”. Upon
   receiving completed entry, they will receive one ballot into a draw for the Contest. All
-  entries must be received during the Contest Period.
-  Prizes: There is one Prize available to be won. The Prize is a ticket to Full Stack Toronto Conference with a total estimated
+  entries must be received during the Contest Period.</p>
+
+  <p>Prizes: There is one Prize available to be won. The Prize is a ticket to Full Stack Toronto Conference with a total estimated
   value of up to five hundred and fifty-none dollars ($559) CDN. Details found on www.fsto.co</p>
 
   <p>Terms and Conditions: The prize has no cash value and cannot be redeemed for cash. In
