--- a/contest/index.html
+++ b/contest/index.html
@@ -65,8 +65,9 @@ title: Contest Rules
   damage any website or undermine the administration, security or legitimate operation of the
   Contest, is a violation of criminal and civil laws and Full Stack Toronto reserves the right to seek
   damages and/or other relief from all persons responsible for such acts to the fullest extent
-  permitted by law and ban or disqualify such persons from this Contest and future contests.
-  Each Prize winner is solely responsible for all costs not expressly described herein and costs
+  permitted by law and ban or disqualify such persons from this Contest and future contests.</p>
+
+  <p>Each Prize winner is solely responsible for all costs not expressly described herein and costs
   associated with delivery. Prize winner is solely responsible for arranging for the pickup and claim of
   all Prizes from the participating Full Stack Toronto Office and are solely responsible for any and all costs
   associated with delivery. The winner will receive an email from Full Stack Toronto with details on how to collect
@@ -79,10 +80,11 @@ title: Contest Rules
   for unclaimed Prizes. If mailed or couriered, Full Stack Toronto takes no responsibility for loss, theft or
   damages that may occur. The Prize must be accepted as awarded and are not transferable. No
   substitutions or cash in lieu of a Prize will be awarded. Full Stack Toronto reserve the right to
-  substitute the Prizes in whole or in part in the event that any component of a Prize is unavailable.
-  General: All decisions of Full Stack Toronto are final. In the event of any dispute regarding the
+  substitute the Prizes in whole or in part in the event that any component of a Prize is unavailable.</p>
+
+  <p>General: All decisions of Full Stack Toronto are final. In the event of any dispute regarding the
   interpretation of these Rules or any decision rendered by Full Stack Toronto, the decision of the Full Stack Toronto
-  Canada shall prevail. The Contest is subject to all applicable Canadian federal, provincial and
+  shall prevail. The Contest is subject to all applicable Canadian federal, provincial and
   municipal laws and regulations. Full Stack Toronto reserves the right to cancel or modify any Contest
   or the Contest Rules at any time without notice. All Prizes must be accepted as awarded, are nontransferable
   and are not convertible to cash. No warranties or guarantees are implied or
