--- a/schedule/index.html
+++ b/schedule/index.html
@@ -10,7 +10,7 @@ js:
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <p>Part of what makes #fstoco so great is our focus on content. Our schedule is designed to have something for everyone on a web team as well as immerse you in other parts of web teams you may not be familiary with. If your focuses is front-end you can also go be exposed to back-end, project or event ux, there is something for everyone! The schedule will slowly fill in as we find the best person and topic related to that slot's focus, we will announce all of the speakers on our twitter @fullstackto</p>
+        <p>Part of what makes #fstoco so great is our focus on content. Our schedule is designed to have something for everyone on a web team as well as immerse you in other parts of web teams you may not be familiary with. If your focuses is front-end you can also go be exposed to back-end, project or even ux, there is something for everyone! The schedule is subject to change without notice, in case of a discrepancy between the website and the app, the app is the most correct and up to date. Enjoy the great content we have for you!</p>
       </div>
     </div>
     <div class="day1">
