--- a/speak/index.html
+++ b/speak/index.html
@@ -51,7 +51,7 @@ title: Speak
 				<ul>
 					<li>January 1st 2016 - CFP Opens</li>
 					<li>April 1st 2016 to July 31st - Select Sessions Announced</li>
-					<li>July 31st 2016 - CFP Closes</li>
+					<li>July 15th 2016 - CFP Closes</li>
 					<li>August 15th 2016 - All Sessions Announced</li>
 				</ul>
 			</div>
