--- a/speakers/index.html
+++ b/speakers/index.html
@@ -8,7 +8,7 @@ js:
 <section id="speakers">
   <div class="container">
     <div class="row col-md-12">
-      <p>We're putting together a fully stacked set of speakers. Take a few moments to get to know them before the conference so you can optimize your experience to take in as much as possible! We will be updating this page as more speakers are announced.</p>
+      <p>We have awesome speakers coming from around the world and from some amazing comapnies such as Microsoft, Netflix, FitBit and more! We're happy to have so many diverse individuals speaking this year! Read all about them below!</p>
     </div>
     <div class="speakerBundle">
 
