--- a/info/index.html
+++ b/info/index.html
@@ -16,7 +16,28 @@ title: The Venue, Host Hotel, and Travel Deals!
       </div>
       <div class="col-sm-12 col-md-8">
         <h3>Room Discounts &amp; Shares</h3>
-        <p>We're excited to provide you an exclusive rate of $251/night. If you are looking to share your room with someone join our <a href="http://techmasters.chat" target="_blank">Slack channel #fstoco</a> and start a conversation! Details on how to book at the discount are located in your registration confirmation email.</p>
+        <p>We're excited to provide you an exclusive rate of $251/night at the Sheraton Centre Hotel. If you are looking to share your room with someone join our <a href="http://techmasters.chat" target="_blank">Slack channel #fstoco</a> and start a conversation! Details on how to book at the discount are located in your registration confirmation email.</p>
+				<p>As the Sheraton Hotel is filling up fast we have also secured the following deals as well.</p>
+				<h4>Bond Place Hotel:</h4>
+				<p>$139 plus 16% taxes per room per night for standard rooms with one queen bed or two twin beds<br />
+					$154 plus 16% taxes per room per night for business rooms with one queen bed<br />
+					$169 plus 16% taxes per room per night for deluxe rooms with either one double/two twin beds or one queen/one double bed or one queen/two twin beds</p>
+
+					<p>These rates are based on single/double occupancy.  There is an extra $15 per person per night charge for triple/quad occupancy (in the deluxe rooms only).  The rates also include wifi. These rates are guaranteed until September 17, 2016, unless the hotel sells out before this date.  After September 17, if they have availability, they can offer best available rates. </p>
+				<h4>Strathcona Hotel:</h4>
+				<p>The rates are as follows (for October 13 and again from October 17-20):<br />
+					$139 plus 16% taxes per room per night for standard rooms with either one queen bed, one king bed or two twin beds<br />
+					$159 plus 16% taxes per room per night for executive rooms with either one queen bed, one king bed, two double beds or two queen beds</p>
+
+					<p>The rates are for single/double occupancy with an extra $20 per person for triple/quad occupancy.  There will also be an option to book an economy room (one single bed) for $119/night, a room with one double bed for $129/night and the executive suite for $259/night.  These three room types are very limited in their availability so they probably will not show as bookable for too long. </p>
+
+					<p>The rates are as follows for October 14 and 15:<br />
+						$179 plus 16% taxes per room per night for standard rooms with either one queen bed, one king bed or two twin beds</br>
+						$199 plus 16% taxes per room per night for executive rooms with either one queen bed, one king bed, two double beds or two queen beds</p>
+
+						<p>The rates are for single/double occupancy with an extra $20 per person for triple/quad occupancy.  There will also be an option to book an economy room (one single bed) for $159/night, a room with one double bed for $169/night and the executive suite for $299/night.</p>
+
+						<p>To book see your registartion confirmation for phone numbers and links</p>
       </div>
 		</div>
 		<div class="row">
