--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@ title: Home
 		<div class="row">
 			<div class="col-sm-12 col-md-8">
 				<h2>About #fstoco</h2>
-				<p>#fstoco is put on by Full Stack Toronto, a non-profit organisation geared towards providing web professionals with intermediate and advanced educational resources. #fstoco is a unique conference because it covers all the layers of the web: Front-end, Back-end, DevOps, UX and visual designs, project management, and product development. Questions? <i>comms@fsto.co</i> will respond as soon as possible. We do not provide visas for attendees.</p>
+				<p>#fstoco is put on by Full Stack Toronto, a non-profit organisation geared towards providing web professionals with intermediate and advanced educational resources. #fstoco is a unique conference because it covers all the layers of the web: Front-end, Back-end, DevOps, UX, project management, and product development. Questions? <i>comms@fsto.co</i> will respond as soon as possible. We do not provide visa assitance for attendees.</p>
 			</div>
 			<div class="col-md-1"></div>
 			<div class="col-md-3">
 				<p><a href="https://www.youtube.com/playlist?list=PL1jKW8WyNdz12VtmfxZe89qL3kGKQHUi5" target="_Blank" /><img src="/static/images/watch-img.png" alt="Watch 2014 Videos" class="img-responsive" /></a></p>
-				<p><a href="https://www.youtube.com/playlist?list=PL1jKW8WyNdz12VtmfxZe89qL3kGKQHUi5" target="_Blank" />Watch the videos</a> from 2015 to get a taste of the conference before you buy!</a>
+				<p><a href="https://www.youtube.com/playlist?list=PL1jKW8WyNdz12VtmfxZe89qL3kGKQHUi5" target="_Blank" />Watch the videos</a> from 2015 to get a taste of the conference before you register!</a>
 			</div>
 		</div>
 	</div>
@@ -20,53 +20,85 @@ title: Home
 <section class="attending">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12 col-md-4 paper">
+			<div class="col-sm-12 col-md-6 paper">
 				<i class="fa fa-4x fa-users"></i>
 				<h2>Who Should Attend</h2>
 				<p>If you work in the web industry #fstoco is for you! Every year, we bring together the world's brightest minds in the business to present on relevant topics with real-life applications. You will go back to work not only knowing how to do the latest and greatest, but most importantly the why.</p>
 			</div>
-			<div class="col-sm-12 col-md-4 paper">
+			<div class="col-sm-12 col-md-6 paper">
 				<i class="fa fa-4x fa-hand-spock-o"></i>
 				<h2>Why You Should Attend</h2>
-				<p>We believe that to become a better professional, you need to understand what the other members of your team are doing. We've planned our content schedule so that you can participate in your concentration/discipline or learn from others to further your career growth.</p>
-			</div>
-			<div class="col-sm-12 col-md-4 paper">
-				<i class="fa fa-4x fa-user-secret"></i>
-				<h2>Who's Attending</h2>
-				<p>Content is king. We strongly believe in NOT selling you our event based on any given speakers or their affiliations (i.e. Google, Microsoft, etc. - but to be frank, these people do actually tend to speak at our events). We are devoted to providing you unbiased, good content first. Check out the <a href="/schedule">schedule</a> we have planned for you</p>
+				<p>We believe that to become a better professional, you need to understand what the other members of your team are doing. We've planned our content schedule so that while you participate in your concentration/discipline you will also learn from other layers of the stack to further your career growth. All well being surrounded by your peers!</p>
 			</div>
 		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-12 paper">
+			<h2>Featured Speakers</h2>
+			<p>We've put together a stellar lineup of industrying leading speakers for you to learn from, here is just a small selection of what you have to look forward to this year at #fstoco, check out the <a href="/spekaers/">speakers page</a> for all 34 of the speakers!</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-12 col-md-2 paper feat">
+			<img src="/static/images/speakers/jem-netflix.png" alt="" class="featured-img img-responsive" />
+			<div class="info"><a href="/schedule">Jem Young - Service Workers and Progressive Web Applications</a></div>
+		</div>
+		<div class="col-sm-12 col-md-2 paper feat">
+			<img src="/static/images/speakers/liv-microsoft.png" alt="" class="featured-img img-responsive" />
+			<div class="info"><a href="/schedule">Liv Erickson - Why You Should Care About the Virtual Reality Web</a></div>
+		</div>
+		<div class="col-sm-12 col-md-2 paper feat">
+			<img src="/static/images/speakers/aravind-twitter.png" alt="" class="featured-img img-responsive" />
+			<div class="info"><a href="/schedule">Aravind Ramanathan - How we deploy the Twitter Widgets Javascript to a billion users</a></div>
+		</div>
+		<div class="col-sm-12 col-md-2 paper feat">
+			<img src="/static/images/speakers/emma-fitbit.png" alt="" class="featured-img img-responsive" />
+			<div class="info"><a href="/schedule">Emma Lawler - Designing for flexibility: less pixels and more structure</a></div>
+		</div>
+		<div class="col-sm-12 col-md-2 paper feat">
+			<img src="/static/images/speakers/jason-datadog.png" alt="" class="featured-img img-responsive" />
+			<div class="info"><a href="/schedule">Jason Yee - Data-driven Post-mortems</a></div>
+		</div>
+		<div class="col-sm-12 col-md-2 paper feat">
+			<img src="/static/images/speakers/kristina-shopify.png" alt="" class="featured-img img-responsive" />
+			<div class="info"><a href="/schedule">Kristina Balaam - Dear Senior Developer,</a></div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-12 col-md-2 paper feat">
+			<img src="/static/images/speakers/jennifer-eventbrite.png" alt="" class="featured-img img-responsive" />
+			<div class="info"><a href="/schedule">Jenn Wong - What The Duck-Typed Are My Engineers Saying?</a></div>
+		</div>
+		<div class="col-sm-12 col-md-2 paper feat">
+			<img src="/static/images/speakers/dave-pagerduty.png" alt="" class="featured-img img-responsive" />
+			<div class="info"><a href="/schedule">Dave Cliffe - Maps and Skateboards: The Product Manager's Toolkit</a></div>
+		</div>
+		<div class="col-sm-12 col-md-2 paper feat">
+			<img src="/static/images/speakers/elle-thoughtbot.png" alt="" class="featured-img img-responsive" />
+			<div class="info"><a href="/schedule">Elle Meridith - Keynote - Self-learning is a marathon, not a sprint</a></div>
+		</div>
+		<div class="col-sm-12 col-md-2 paper feat">
+			<img src="/static/images/speakers/tim-atlassian.png" alt="" class="featured-img img-responsive" />
+			<div class="info"><a href="/schedule">Tim Petterson - Tracking huge files with Git LFS</a></div>
+		</div>
+		<div class="col-sm-12 col-md-2 paper feat">
+			<img src="/static/images/speakers/marissa-composed.png" alt="" class="featured-img img-responsive" />
+			<div class="info"><a href="/schedule">Marissa Levy Lerer - Keynote - Where My Ladies At: The Radical Topic of Women in Tech</a></div>
+		</div>
+		<div class="col-sm-12 col-md-2 paper feat">
+			<img src="/static/images/speakers/steve-yell.png" alt="" class="featured-img img-responsive" />
+			<div class="info"><a href="/schedule">Steve Workman - HTTPS is hard</a></div>
+		</div>
+	</div>
+	<div class="row paper">
+		<a href="/speakers" class="btn btn-info btn-lg">See All Speakers</a>
+	</div>
 	</div>
 </section>
 <section class="red-poly">
 	<div class="container">
 		<h2>“After #fstoco, I want to a) learn all the things (dev), and b) buy all the things (IoT). May have to c) control impulses a little” - @andkerel</h2>
-	</div>
-</section>
-<section>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
-				<h2>How we're different</h2>
-				<p>All of our sessions at #fstoco follow a hybrid session model where the speakers will deliver the best in practical web solutions with real-life examples free of commercial content (no sponsored content or sales pitches here). This is the kind of learning that you can put into action the moment you return to work.</p>
-				<p>All sessions are followed by open Q&amp;As with the speaker to help improve your practice of their idea. The speakers are also web professionals just like you! Like you, they personally deal with these problems and solutions daily so don't be shy. Ask away!</p>
-				<p>Our keynotes are here to inspire, challenge and provide you with more than hard-skills to take back to the office. These, along with lots of coffee will get your day kickstarted!</p>
-				<p>Furthermore, going to any conference is more than just sitting and listening to awesome talks, it's also about fostering valuable relationships to move your career forward and help you out when needed. We know "networking" can be difficult and we are here to help, we know that when you're passionate about something you can talk about it endlessly so we're going to show it off on your badge to help you start conversations. There is plenty of break time and we absolutely encourage you to get to know each other between all the awesome sessions.</p>
-			</div>
-			<div class="col-md-6">
-				<h2>What's Included</h2>
-				<p>Building on the same great perks of last year this year's new addition is "passion talks", unorganized by us coordinated by you! There will be a special place for you to show and talk about your passion at this years conference, we will also show it off on your badge to help with networking during the breaks!</p>
-				<p>All sessions will be recorded, slides collected and posted online after the event for you to reference in the future.</p>
-				<p>We have a convenient mobile app to help you plan your conference schedule and experience.</p>
-				<p>Last but not least, who doesn't like a good party!? At the end of the first day we will all gather for some light refreshments &amp; cocktails, and of course talk about what we have learned and how we are going to implement it back at work.</p>
-				<p>Oh! and heaps of #SWAG, don't forget about that!</p>
-			</div>
-		</div>
-	</div>
-</section>
-<section class="blue-poly">
-	<div class="container">
-		<h2>“Got a bunch of great ideas and met some great people at #fstoco this weekend” - @dougalg</h2>
 	</div>
 </section>
 <section>
