volunteer link, mobile

--- a/index.html
+++ b/index.html
@@ -40,59 +40,60 @@ title: Home
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-sm-6 col-md-2 paper feat">
+		<div class="col-xs-6 col-md-2 paper feat">
 			<img src="/static/images/speakers/jem-netflix.png" alt="" class="featured-img img-responsive" />
 			<div class="info"><a href="/schedule">Jem Young - Service Workers and Progressive Web Applications</a></div>
 		</div>
-		<div class="col-sm-6 col-md-2 paper feat">
+		<div class="col-xs-6 col-md-2 paper feat">
 			<img src="/static/images/speakers/liv-microsoft.png" alt="" class="featured-img img-responsive" />
 			<div class="info"><a href="/schedule">Liv Erickson - Why You Should Care About the Virtual Reality Web</a></div>
 		</div>
-		<div class="col-sm-6 col-md-2 paper feat">
+		<div class="col-xs-6 col-md-2 paper feat">
 			<img src="/static/images/speakers/aravind-twitter.png" alt="" class="featured-img img-responsive" />
 			<div class="info"><a href="/schedule">Aravind Ramanathan - How we deploy the Twitter Widgets Javascript to a billion users</a></div>
 		</div>
-		<div class="col-sm-6 col-md-2 paper feat">
+		<div class="col-xs-6 col-md-2 paper feat">
 			<img src="/static/images/speakers/emma-fitbit.png" alt="" class="featured-img img-responsive" />
 			<div class="info"><a href="/schedule">Emma Lawler - Designing for flexibility: less pixels and more structure</a></div>
 		</div>
-		<div class="col-sm-6 col-md-2 paper feat">
+		<div class="col-xs-6 col-md-2 paper feat">
 			<img src="/static/images/speakers/jason-datadog.png" alt="" class="featured-img img-responsive" />
 			<div class="info"><a href="/schedule">Jason Yee - Data-driven Post-mortems</a></div>
 		</div>
-		<div class="col-sm-6 col-md-2 paper feat">
+		<div class="col-xs-6 col-md-2 paper feat">
 			<img src="/static/images/speakers/kristina-shopify.png" alt="" class="featured-img img-responsive" />
 			<div class="info"><a href="/schedule">Kristina Balaam - Dear Senior Developer,</a></div>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-sm-6 col-md-2 paper feat">
+		<div class="col-xs-6 col-md-2 paper feat">
 			<img src="/static/images/speakers/jennifer-eventbrite.png" alt="" class="featured-img img-responsive" />
 			<div class="info"><a href="/schedule">Jenn Wong - What The Duck-Typed Are My Engineers Saying?</a></div>
 		</div>
-		<div class="col-sm-6 col-md-2 paper feat">
+		<div class="col-xs-6 col-md-2 paper feat">
 			<img src="/static/images/speakers/dave-pagerduty.png" alt="" class="featured-img img-responsive" />
 			<div class="info"><a href="/schedule">Dave Cliffe - Maps and Skateboards: The Product Manager's Toolkit</a></div>
 		</div>
-		<div class="col-sm-6 col-md-2 paper feat">
+		<div class="col-xs-6 col-md-2 paper feat">
 			<img src="/static/images/speakers/elle-thoughtbot.png" alt="" class="featured-img img-responsive" />
 			<div class="info"><a href="/schedule">Elle Meridith - Keynote - Self-learning is a marathon, not a sprint</a></div>
 		</div>
-		<div class="col-sm-6 col-md-2 paper feat">
+		<div class="col-xs-6 col-md-2 paper feat">
 			<img src="/static/images/speakers/tim-atlassian.png" alt="" class="featured-img img-responsive" />
 			<div class="info"><a href="/schedule">Tim Petterson - Tracking huge files with Git LFS</a></div>
 		</div>
-		<div class="col-sm-6 col-md-2 paper feat">
+		<div class="col-xs-6 col-md-2 paper feat">
 			<img src="/static/images/speakers/marissa-composed.png" alt="" class="featured-img img-responsive" />
 			<div class="info"><a href="/schedule">Marissa Levy Lerer - Keynote - Where My Ladies At: The Radical Topic of Women in Tech</a></div>
 		</div>
-		<div class="col-sm-6 col-md-2 paper feat">
+		<div class="col-xs-6 col-md-2 paper feat">
 			<img src="/static/images/speakers/steve-yell.png" alt="" class="featured-img img-responsive" />
 			<div class="info"><a href="/schedule">Steve Workman - HTTPS is hard</a></div>
 		</div>
 	</div>
 	<div class="row paper">
-		<a href="/speakers" class="btn btn-info btn-lg">See All Speakers</a>
+		<a href="/speakers" class="btn btn-info btn-lg">See All 34 Speakers</a> <a class="btn btn-success btn-lg" href="https://ti.to/fullstackto/2016" target="_blank"><i class="fa fa-ticket"></i>
+			<span>Register Today!</span></a>
 	</div>
 	</div>
 </section>
@@ -111,7 +112,7 @@ title: Home
 			<div class="col-sm-12 col-md-8">
 				<p>While speakers are largely unpaid in most other events, we are committed to rewarding ours while still ensuring the best quality experience for our attendees including expanding on their feedback such as providing a better way to interact with you the sponsor!<br>This comes at a huge, costly effort for our organisation.</p>
 			    <p>If your company is interested in helping by sponsoring the event please contact us at <i>sponsorship@fsto.co</i>. Sponsor contribution options can be found in the <a href="https://www.sponseasy.com/p/full-stack-toronto-conference">sponsorship site</a></p>
-				<p>Want to support us yourself? Terrific! An event like this takes a lot of human power. If you want to help out at the event and attend the presentations? Signup to be a volunteer!</p>
+				<p>Want to support us yourself? Terrific! An event like this takes a lot of human power. If you want to help out at the event and attend the presentations? <a href="https://www.kindnessconnect.com/fstoco/">Signup to be a volunteer!</a></p>
 			</div>
 		</div>
 	</div>
