--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
 		<div class="row">
 			<div class="col-sm-12 col-md-8">
 				<h2>About #fstoco</h2>
-				<p>#fstoco is put on by Full Stack Toronto, a non-profit organisation geared towards providing web professionals with intermediate and advanced educational resources. #fstoco is a unique conference because it covers all the layers of the web: Front-end, Back-end, DevOps, UX, project management, and product development. Questions? <i>comms@fsto.co</i> will respond as soon as possible. We do not provide visa assitance for attendees.</p>
+				<p>#fstoco is put on by Full Stack Toronto, a non-profit organisation geared towards providing web professionals with intermediate and advanced educational resources. #fstoco is a unique conference because it covers all the layers of the web: Front-end, Back-end, DevOps, UX, project management, and product development. Questions? <i>comms@fsto.co</i> will respond as soon as possible. We do not provide visa assistance for attendees.</p>
 			</div>
 			<div class="col-md-1"></div>
 			<div class="col-md-3">
