--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -20,7 +20,7 @@ title: Code of Conduct
 
       <p>If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a staff member immediately (comms@fsto.co). Staff will be happy to help participants contact security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of events. We value your attendance.</p>
 
-      <p>We expect participants to follow these rules at all Full Stack Toronto related events and social events.</p>
+      <p>We expect participants to follow these rules at all Full Stack Toronto related events and social events. You can now enter code coc into the app to win 5 points.</p>
 
       <p>Adapted from http://confcodeofconduct.com/</p>
 
