--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -10,7 +10,7 @@ title: Code of Conduct
 
       <p>Our events are dedicated to providing a harassment-free experience for everyone, regardless of gender, age, sexual orientation, disability, physical appearance, body size, race, or religion (or lack thereof). We do not tolerate harassment of participants in any form. Sexual language and imagery is not appropriate for any event venue, including talks, workshops, parties, Twitter and other online media. Event participants violating these rules may be sanctioned or expelled from the event without a refund at the discretion of the event organizers.</p>
 
-      <p>Harassment includes offensive verbal comments related to gender, age, sexual orientation, disability, physical appearance, body size, race, religion, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.</p>
+      <p>Harassment includes offensive and inaccurate verbal or written comments related to gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, religion, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention. Sharing of information based on assumptions of the above will also not be tolerated, it is our duty to protect our attendees freedom of expression and will not tolerate the sharing of incorrect information on how persons identify.</p>
 
       <p>Participants asked to stop any harassing behavior are expected to comply immediately.</p>
 
