speaker link fix, via logo fix

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title: Home
 		<div class="row">
 			<div class="col-sm-12 paper">
 			<h2>Featured Speakers</h2>
-			<p>We've put together a stellar lineup of industrying leading speakers for you to learn from, here is just a small selection of what you have to look forward to this year at #fstoco, check out the <a href="/spekaers/">speakers page</a> for all 34 of the speakers!</p>
+			<p>We've put together a stellar lineup of industrying leading speakers for you to learn from, here is just a small selection of what you have to look forward to this year at #fstoco, check out the <a href="/speakers">speakers page</a> for all 34 of the speakers!</p>
 		</div>
 	</div>
 	<div class="row">
