--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@ title: Home
 		</div>
 	</div>
 	<div class="row paper">
-		<a href="/speakers" class="btn btn-info btn-lg">See All 34 Speakers</a> <a class="btn btn-success btn-lg" href="https://ti.to/fullstackto/2016" target="_blank"><i class="fa fa-ticket"></i>
-			<span>Register Today!</span></a>
+		<a href="/speakers" class="btn btn-info btn-lg">See All 34 Speakers</a>
 	</div>
 	</div>
 </section>
