--- a/tv/index.html
+++ b/tv/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html itemscope itemtype="http://schema.org/Article">
-  {% include head.html %}
+  <head>
+  </head>
   <body>
     <style>
+    html, body {
+      padding: 0;
+      margin: 0;
+      font-family: Helvetica, Arial, sans-serif;
+    }
+    .tweetwall {
+      float: left;
+      width: 1520px;
+      height: 1080px;
+    }
+    .sessions{
+      float: left;
+      width: 400px;
+      height: 1080px;
+    }
 
     </style>
 <!-- BEGIN TWEETWALL EMBED -->
-<div class="tweetwall"><script src="//fstoco.tweetwall.com/js/embed.js?header=false&layout=1&bgcolor=transparent&border=false&width=1080px&height=1080px" class="tweetwall-script" async></script>
+<div class="tweetwall"><script src="//fstoco.tweetwall.com/js/embed.js?header=false&layout=1&bgcolor=transparent&border=false&width=1520px&height=1080px" class="tweetwall-script" async></script>
 </div>
 <!-- END TWEETWALL EMBED -->
 <div class="sessions">
